--- a/currency-exchange-frontend-main/nginx.conf
+++ b/currency-exchange-frontend-main/nginx.conf
@@ -4,7 +4,7 @@ user root;
 server {
     listen 80;
 
-    server_name your_domain.com;
+    server_name localhost;
 
     location / {
         proxy_pass http://ui:80/;
