--- a/currency-exchange-frontend-main/Dockerfile
+++ b/currency-exchange-frontend-main/Dockerfile
@@ -2,10 +2,9 @@ FROM nginx:alpine
 
 WORKDIR /usr/share/nginx/html
 
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+
 COPY . .
 
-COPY nginx.conf /etc/nginx/nginx.conf
-
-EXPOSE 80
-
+EXPOSE 3000
 CMD ["nginx", "-g", "daemon off;"]
