--- a/currency-exchange-frontend-main/nginx.conf
+++ b/currency-exchange-frontend-main/nginx.conf
@@ -1,20 +1,13 @@
-user root;
-
 
 server {
-    listen 80;
+    listen 3000;
 
-    server_name localhost;
+     location / {
+        root   /usr/share/nginx/html;
+        index  index.html index.htm;
+        try_files $uri $uri/ /index.html =404;
+     }
 
-    location / {
-        proxy_pass http://ui:80/;
-
-    }
-
-    location /api/ {
-        proxy_pass http://api:8080/;
-
-    }
-
-
+     include  /etc/nginx/extra-conf.d/*conf;
 }
+
